--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -8,3 +8,48 @@
     padding: 50px 75px;
     max-width: 75%;
 }
+
+.form-container {
+    margin: 50px auto auto auto;
+    padding: 50px 75px;
+    max-width: 600px;
+    border: 1px solid #f39c12;
+    border-radius: 0.25rem;
+    box-shadow: 0 0 3px 0 #999999;
+}
+
+.custom-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-heading {
+    margin-bottom: 24px;
+}
+
+.form-group {
+    margin: 8px 0 8px 0;
+}
+
+.form-label {
+    font-weight: bold;
+    margin-bottom: 0;
+}
+
+.form-button {
+    color: #ffffff;
+    background-color: #f39c12;
+    border-color: #f39c12;
+}
+
+.form-button:focus {
+    color: #ffffff;
+    background-color: #f39c12;
+    border-color: #f39c12;
+}
+
+.form-button:hover {
+    color: #ffffff;
+    background-color: #d68910;
+    border-color: #d68910;
+}
