Added custom client-side validation to login form

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -36,6 +36,11 @@
     margin-bottom: 0;
 }
 
+.error-message {
+    font-size: 80%;
+    color: #dc3545;
+}
+
 .form-button {
     color: #ffffff;
     background-color: #f39c12;
