--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,8 +13,18 @@
     <a class="navbar-brand" href="#" th:href="@{/}">IT Events</a>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item" sec:authorize="isAuthenticated()">
-                <a class="nav-link" th:href="@{/logout}" th:text="'Wyloguj się'">Wyloguj się</a>
+            <li class="nav-item dropdown" sec:authorize="isAuthenticated()">
+                <a class="nav-link dropdown-toggle"
+                   href="#"
+                   id="navbarDropdownMenuAppUserLink"
+                   data-toggle="dropdown"
+                   aria-haspopup="true"
+                   aria-expanded="false">
+                    <span th:text="${#authentication.principal.username}">jankowalski@example.com</span>
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuAppUserLink">
+                    <a class="dropdown-item" th:href="@{/logout}" th:text="'Wyloguj się'">Wyloguj się</a>
+                </div>
             </li>
             <li class="nav-item" sec:authorize="!isAuthenticated()">
                 <a class="nav-link" th:href="@{/login}" th:text="'Zaloguj się'">Zaloguj się</a>
