Added custom authentication failure messages to login form

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -27,6 +27,12 @@
     margin-bottom: 24px;
 }
 
+.custom-alert-danger {
+    color: #dc3545;
+    background-color: #f8d7da;
+    border-color: #dc3545;
+}
+
 .form-group {
     margin: 8px 0 8px 0;
 }
