--- a/src/main/resources/templates/forms/login-form.html
+++ b/src/main/resources/templates/forms/login-form.html
@@ -15,6 +15,10 @@
             <h2>Zaloguj się do IT Events</h2>
             <span>Wprowadź swoje dane poniżej</span>
         </div>
+        <div class="alert custom-alert-danger" role="alert" th:if="${#httpServletRequest.getParameter('error') == 'badCredentials'}" th:text="#{loginForm.exception.BadCredentialsException.message}"></div>
+        <div class="alert custom-alert-danger" role="alert" th:if="${#httpServletRequest.getParameter('error') == 'disabledAccount'}" th:text="#{loginForm.exception.DisabledException.message}"></div>
+        <div class="alert custom-alert-danger" role="alert" th:if="${#httpServletRequest.getParameter('error') == 'lockedAccount'}" th:text="#{loginForm.exception.LockedException.message}"></div>
+        <div class="alert custom-alert-danger" role="alert" th:if="${#httpServletRequest.getParameter('error') == 'unknownError'}" th:text="#{loginForm.exception.unknownError.message}"></div>
         <div class="form-group">
             <label for="username" class="form-label">E-MAIL</label>
             <input type="text"
