Added custom client-side validation to registration form

--- a/src/main/resources/templates/forms/registration-form.html
+++ b/src/main/resources/templates/forms/registration-form.html
@@ -10,7 +10,7 @@
 <body>
 <nav th:replace="fragments :: navbar"></nav>
 <div class="form-container">
-    <form id="registrationForm" name="registrationForm" class="custom-form" method="post" th:method="post" action="#" th:action="@{/register}" th:object="${newUserData}">
+    <form id="registrationForm" name="registrationForm" class="custom-form" onsubmit="return validateRegistrationForm();" method="post" th:method="post" action="#" th:action="@{/register}" th:object="${newUserData}">
         <div class="form-heading">
             <h2>Rejestracja</h2>
             <span>Wprowadź swoje dane poniżej</span>
@@ -21,8 +21,8 @@
                    id="firstName" name="firstName"
                    class="form-control" th:class="${#fields.hasErrors('firstName')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                    placeholder="Imię"
-                   th:field="*{firstName}"
-                   required>
+                   th:field="*{firstName}">
+            <div id="firstNameErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.firstName.error.notNull.message}">Błędy związane z imieniem</div>
             <div class="error-message" th:errors="*{firstName}">Błędy związane z imieniem</div>
         </div>
         <div class="form-group">
@@ -31,8 +31,8 @@
                    id="lastName" name="lastName"
                    class="form-control" th:class="${#fields.hasErrors('lastName')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                    placeholder="Nazwisko"
-                   th:field="*{lastName}"
-                   required>
+                   th:field="*{lastName}">
+            <div id="lastNameErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.lastName.error.notNull.message}">Błędy związane z nazwiskiem</div>
             <div class="error-message" th:errors="*{lastName}">Błędy związane z nazwiskiem</div>
         </div>
         <div class="form-group">
@@ -41,8 +41,8 @@
                    id="email" name="email"
                    class="form-control" th:class="${#fields.hasErrors('email')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                    placeholder="E-mail"
-                   th:field="*{email}"
-                   required>
+                   th:field="*{email}">
+            <div id="emailErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.email.error.notNull.message}">Błędy związane z emailem</div>
             <div class="error-message" th:errors="*{email}">Błędy związane z emailem</div>
         </div>
         <div class="form-group">
@@ -51,8 +51,8 @@
                    id="password" name="password"
                    class="form-control" th:class="${#fields.hasErrors('password')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                    placeholder="Hasło"
-                   th:field="*{password}"
-                   required>
+                   th:field="*{password}">
+            <div id="passwordErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.password.error.notNull.message}">Błędy związane z hasłem</div>
             <div class="error-message" th:errors="*{password}">Błędy związane z hasłem</div>
         </div>
         <div class="form-group">
@@ -61,8 +61,8 @@
                    id="confirmPassword" name="confirmPassword"
                    class="form-control" th:class="${#fields.hasErrors('confirmPassword')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                    placeholder="Potwierdź hasło"
-                   th:field="*{confirmPassword}"
-                   required>
+                   th:field="*{confirmPassword}">
+            <div id="confirmPasswordErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.confirmPassword.error.notNull.message}">Błędy związane z hasłem</div>
             <div class="error-message" th:errors="*{confirmPassword}">Błędy związane z hasłem</div>
         </div>
         <div class="d-grid gap-2 col-5 mx-auto" style="margin: 8px 0 8px 0;">
@@ -72,5 +72,6 @@
 </div>
 
 <th:block th:replace="fragments :: scripts"></th:block>
+<script type="text/javascript" src="../../static/scripts/validation.js" th:src="@{/scripts/validation.js}"></script>
 </body>
 </html>
