Created custom UserDetails

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,7 +20,7 @@
                    data-toggle="dropdown"
                    aria-haspopup="true"
                    aria-expanded="false">
-                    <span th:text="${#authentication.principal.username}">jankowalski@example.com</span>
+                    <span th:text="${#authentication.principal.firstName + ' ' + #authentication.principal.lastName}">Jan Kowalski</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuAppUserLink">
                     <a class="dropdown-item" th:href="@{/logout}" th:text="'Wyloguj się'">Wyloguj się</a>
