--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,6 +23,9 @@
                     <span th:text="${#authentication.principal.firstName + ' ' + #authentication.principal.lastName}">Jan Kowalski</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuAppUserLink">
+                    <a class="dropdown-item" th:href="@{/profile}" th:text="${#authentication.principal.firstName + ' ' + #authentication.principal.lastName}">Jan Kowalski</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" th:href="@{/profile}" th:text="'Profil'">Profil</a>
                     <a class="dropdown-item" th:href="@{/logout}" th:text="'Wyloguj się'">Wyloguj się</a>
                 </div>
             </li>
