Added user table

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -73,3 +73,15 @@
     font-weight: bold;
     text-align: left;
 }
+
+.table-heading {
+    text-align: center;
+}
+
+.icon-button {
+    color: #f39c12;
+}
+
+.icon-button:hover {
+    color: #d68910;
+}
