--- a/src/main/resources/templates/app-user-table.html
+++ b/src/main/resources/templates/app-user-table.html
@@ -17,7 +17,7 @@
     <div class="row" style="margin: 0; padding: 5px; background-color: #ffffff; display: flex; justify-content: center; align-items: center;">
         <div class="col-md-4"></div>
         <div class="col-md-4" style="text-align: center;">
-            <span th:text="'Liczba użytkowników: ' + ${users.size()}">Liczba użytkowników: 0</span>
+            <span th:text="'Liczba użytkowników: ' + ${users.getTotalElements()}">Liczba użytkowników: 0</span>
         </div>
         <div class="col-md-4"></div>
     </div>
@@ -33,7 +33,7 @@
         </thead>
         <tbody>
         <tr th:each="user, status: ${users}">
-            <td th:text="${status.count}">1</td>
+            <td th:text="${((users.getNumber() + 1) * 10) - 10 + status.count}">1</td>
             <td th:text="${user.firstName}">Jan</td>
             <td th:text="${user.lastName}">Kowalski</td>
             <td style="text-align: center;" th:text="${user.email}">jankowalski@example.com</td>
@@ -41,8 +41,46 @@
                 <a href="#" th:href="@{'/users/' + ${user.id}}"><i class="fa-solid fa-user icon-button"></i></a>
             </td>
         </tr>
+        <th:block th:if="${users.getNumberOfElements() < 10}" th:each="i, status: ${#numbers.sequence((1 + (users.getNumber() * 10) + users.getNumberOfElements()), (users.getNumber() + 1) * 10)}">
+            <tr>
+                <td th:text="${i}">1</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </th:block>
         </tbody>
     </table>
+    <nav>
+        <ul class="pagination justify-content-center">
+            <li class="page-item disabled" th:class="${(users.getNumber() + 1) > 1 ? 'page-item' : 'page-item disabled'}">
+                <a class="page-link" href="#" th:href="@{${prefixUrl} + 'page=1'}">Pierwsza</a>
+            </li>
+            <li class="page-item disabled" th:class="${(users.getNumber() + 1) > 1 ? 'page-item' : 'page-item disabled'}">
+                <a class="page-link" href="#" th:href="@{${prefixUrl} + 'page=' + ${users.getNumber()}}">Poprzednia</a>
+            </li>
+            <li class="page-item disabled" th:if="${users.getTotalElements() == 0}">
+                <a class="page-link" href="#">1</a>
+            </li>
+            <th:block th:if="${users.getTotalElements() > 0}" th:each="i: ${#numbers.sequence((users.getNumber() + 1) - 3, (users.getNumber() + 1) - 1)}">
+                <li class="page-item" th:if="${i > 0}">
+                    <a class="page-link" href="#" th:href="@{${prefixUrl} + 'page=' + ${i}}" th:text="${i}">1</a>
+                </li>
+            </th:block>
+            <th:block th:if="${users.getTotalElements() > 0}" th:each="i: ${#numbers.sequence((users.getNumber() + 1), (users.getNumber() + 1) + 3)}">
+                <li class="page-item active" th:if="${i <= users.getTotalPages()}" th:class="${(users.getNumber() + 1) != i ? 'page-item' : 'page-item active'}">
+                    <a class="page-link" href="#" th:href="@{${prefixUrl} + 'page=' + ${i}}" th:text="${i}">1</a>
+                </li>
+            </th:block>
+            <li class="page-item disabled" th:class="${(users.getNumber() + 1) < users.getTotalPages() ? 'page-item' : 'page-item disabled'}">
+                <a class="page-link" href="#" th:href="@{${prefixUrl} + 'page=' + ${users.getNumber() + 2}}">Następna</a>
+            </li>
+            <li class="page-item disabled" th:class="${(users.getNumber() + 1) < users.getTotalPages() ? 'page-item' : 'page-item disabled'}">
+                <a class="page-link" href="#" th:href="@{${prefixUrl} + 'page=' + ${users.getTotalPages()}}">Ostatnia</a>
+            </li>
+        </ul>
+    </nav>
 </div>
 
 <th:block th:replace="fragments :: scripts"></th:block>
