--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -91,6 +91,20 @@
     border-color: #f39c12;
 }
 
+.sort-options-menu {
+    padding: 0.375rem 0.75rem;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+}
+
+.sort-options-menu:hover {
+    text-decoration: none;
+    color: #495057;
+}
+
 .page-link {
     color: #f39c12;
 }
