Added search bar to user table

--- a/src/main/resources/templates/app-user-table.html
+++ b/src/main/resources/templates/app-user-table.html
@@ -14,6 +14,20 @@
     <div class="table-heading">
         <h2>Użytkownicy</h2>
     </div>
+    <div class="search-container">
+        <form id="searchForm" name="searchForm" class="search-form" method="get" th:method="get" action="#" th:action="@{'/users/results'}">
+            <div style="padding: 0.5rem 0.75rem;">
+                <i class="fa-solid fa-search search-icon"></i>
+            </div>
+            <input type="search"
+                   id="search_query" name="search_query"
+                   class="search-form-input"
+                   placeholder="Szukaj"
+                   th:value="${#request.getParameter('search_query')}"
+                   required>
+            <button class="btn form-button" type="submit">Szukaj</button>
+        </form>
+    </div>
     <div class="row" style="margin: 0; padding: 5px; background-color: #ffffff; display: flex; justify-content: center; align-items: center;">
         <div class="col-md-4"></div>
         <div class="col-md-4" style="text-align: center;">
