--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -78,6 +78,49 @@
     text-align: center;
 }
 
+.search-container {
+    padding: 16px 12px 16px 0;
+    background-color: #d3d3d3;
+}
+
+.search-form {
+    width: 100%;
+    display: flex;
+}
+
+.search-icon {
+    color: #f39c12;
+}
+
+.search-form-input {
+    font-size: 1rem;
+    color: #495057;
+    width: 100%;
+    padding: 0.5rem 0.75rem;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 0;
+}
+
+.search-form-input:focus-visible {
+    outline: none;
+}
+
+.search-form-button {
+    padding: 0.5rem 0.75rem;
+    background-color: #ffffff;
+    border: none;
+    cursor: pointer;
+}
+
+.search-form-button:focus {
+    outline: none;
+}
+
+.search-form-button:focus-visible {
+    outline: none;
+}
+
 .icon-button {
     color: #f39c12;
 }
