Added edit user profile option to user settings

--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -27,6 +27,12 @@
     margin-bottom: 24px;
 }
 
+.custom-alert-success {
+    color: #28a745;
+    background-color: #d4edda;
+    border-color: #28a745;
+}
+
 .custom-alert-danger {
     color: #dc3545;
     background-color: #f8d7da;
@@ -158,4 +164,23 @@
 
 .page-link:hover {
     color: #d68910;
+}
+
+.side-nav-link {
+    display: block;
+    padding: 0.5rem 1rem;
+    color: #212529;
+    border-radius: 0.5rem;
+}
+
+.side-nav-link:hover {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: rgb(243, 156, 18, .5);
+}
+
+.side-nav-link.active {
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #f39c12;
 }
