--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -43,6 +43,7 @@
                     <a class="dropdown-item" th:href="@{/profile}" th:text="${#authentication.principal.firstName + ' ' + #authentication.principal.lastName}">Jan Kowalski</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" th:href="@{/profile}" th:text="'Profil'">Profil</a>
+                    <a class="dropdown-item" th:href="@{/settings/profile}" th:text="'Ustawienia'">Ustawienia</a>
                     <a class="dropdown-item" th:href="@{/logout}" th:text="'Wyloguj się'">Wyloguj się</a>
                 </div>
             </li>
