[Admin Panel] Added custom client-side validation to user profile edit form

--- a/src/main/resources/templates/admin/forms/app-user-profile-edit-form.html
+++ b/src/main/resources/templates/admin/forms/app-user-profile-edit-form.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
         <div class="col-md-9">
-            <form id="adminUserProfileEditForm" name="adminUserProfileEditForm" class="custom-form" enctype="multipart/form-data" method="post" th:method="patch" action="#" th:action="@{'/admin/users/' + ${userProfile.id} + '/settings/profile'}" th:object="${userProfile}">
+            <form id="adminUserProfileEditForm" name="adminUserProfileEditForm" class="custom-form" enctype="multipart/form-data" onsubmit="return validateAdminUserProfileEditForm();" method="post" th:method="patch" action="#" th:action="@{'/admin/users/' + ${userProfile.id} + '/settings/profile'}" th:object="${userProfile}">
                 <div class="form-heading">
                     <h2>Edycja profilu użytkownika</h2>
                     <span>Zaktualizuj profil użytkownika poniżej</span>
@@ -42,8 +42,8 @@
                            id="firstName" name="firstName"
                            class="form-control" th:class="${#fields.hasErrors('firstName')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                            placeholder="Imię"
-                           th:field="*{firstName}"
-                           required>
+                           th:field="*{firstName}">
+                    <div id="firstNameErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.firstName.error.notNull.message}">Błędy związane z imieniem</div>
                     <div class="error-message" th:errors="*{firstName}">Błędy związane z imieniem</div>
                 </div>
                 <div class="form-group">
@@ -52,8 +52,8 @@
                            id="lastName" name="lastName"
                            class="form-control" th:class="${#fields.hasErrors('lastName')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                            placeholder="Nazwisko"
-                           th:field="*{lastName}"
-                           required>
+                           th:field="*{lastName}">
+                    <div id="lastNameErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.lastName.error.notNull.message}">Błędy związane z nazwiskiem</div>
                     <div class="error-message" th:errors="*{lastName}">Błędy związane z nazwiskiem</div>
                 </div>
                 <div class="form-group">
@@ -61,8 +61,8 @@
                     <input type="date"
                            id="dateOfBirth" name="dateOfBirth"
                            class="form-control" th:class="${#fields.hasErrors('dateOfBirth')} == FALSE ? 'form-control' : 'form-control is-invalid'"
-                           th:field="*{dateOfBirth}"
-                           required>
+                           th:field="*{dateOfBirth}">
+                    <div id="dateOfBirthErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.dateOfBirth.error.notNull.message}">Błędy związane z datą urodzenia</div>
                     <div class="error-message" th:errors="*{dateOfBirth}">Błędy związane z datą urodzenia</div>
                 </div>
                 <div class="form-group">
@@ -92,5 +92,6 @@
 </div>
 
 <th:block th:replace="fragments :: scripts"></th:block>
+<script type="text/javascript" src="../../../static/scripts/validation.js" th:src="@{/scripts/validation.js}"></script>
 </body>
 </html>
