Added custom client-side validation to user password edit form

--- a/src/main/resources/templates/forms/app-user-password-edit-form.html
+++ b/src/main/resources/templates/forms/app-user-password-edit-form.html
@@ -22,7 +22,7 @@
             </ul>
         </div>
         <div class="col-md-9">
-            <form id="userPasswordEditForm" name="userPasswordEditForm" class="custom-form" method="post" th:method="patch" action="#" th:action="@{/settings/password}" th:object="${newUserPassword}">
+            <form id="userPasswordEditForm" name="userPasswordEditForm" class="custom-form" onsubmit="return validateUserPasswordEditForm();" method="post" th:method="patch" action="#" th:action="@{/settings/password}" th:object="${newUserPassword}">
                 <div class="form-heading">
                     <h2>Zmiana hasła</h2>
                     <span>Wprowadź nowe hasło poniżej</span>
@@ -34,8 +34,8 @@
                            id="currentPassword" name="currentPassword"
                            class="form-control" th:class="${#fields.hasErrors('currentPassword')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                            placeholder="Aktualne hasło"
-                           th:field="*{currentPassword}"
-                           required>
+                           th:field="*{currentPassword}">
+                    <div id="currentPasswordErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.currentPassword.error.notNull.message}">Błędy związane z hasłem</div>
                     <div class="error-message" th:errors="*{currentPassword}">Błędy związane z hasłem</div>
                 </div>
                 <div class="form-group">
@@ -44,8 +44,8 @@
                            id="newPassword" name="newPassword"
                            class="form-control" th:class="${#fields.hasErrors('newPassword')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                            placeholder="Nowe hasło"
-                           th:field="*{newPassword}"
-                           required>
+                           th:field="*{newPassword}">
+                    <div id="newPasswordErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.newPassword.error.notNull.message}">Błędy związane z hasłem</div>
                     <div class="error-message" th:errors="*{newPassword}">Błędy związane z hasłem</div>
                 </div>
                 <div class="form-group">
@@ -54,8 +54,8 @@
                            id="confirmNewPassword" name="confirmNewPassword"
                            class="form-control" th:class="${#fields.hasErrors('confirmNewPassword')} == FALSE ? 'form-control' : 'form-control is-invalid'"
                            placeholder="Potwierdź nowe hasło"
-                           th:field="*{confirmNewPassword}"
-                           required>
+                           th:field="*{confirmNewPassword}">
+                    <div id="confirmNewPasswordErrorMessage" class="error-message" style="display: none;" th:text="#{form.field.confirmNewPassword.error.notNull.message}">Błędy związane z hasłem</div>
                     <div class="error-message" th:errors="*{confirmNewPassword}">Błędy związane z hasłem</div>
                 </div>
                 <div class="d-grid gap-2 col-5 mx-auto" style="margin: 8px 0 8px 0;">
@@ -67,5 +67,6 @@
 </div>
 
 <th:block th:replace="fragments :: scripts"></th:block>
+<script type="text/javascript" src="../../static/scripts/validation.js" th:src="@{/scripts/validation.js}"></script>
 </body>
 </html>
