--- a/src/main/resources/templates/admin/forms/app-user-profile-edit-form.html
+++ b/src/main/resources/templates/admin/forms/app-user-profile-edit-form.html
@@ -16,6 +16,9 @@
                 <li class="nav-item">
                     <a class="side-nav-link active" href="#" th:href="@{'/admin/users/' + ${userProfile.id} + '/settings/profile'}">Profil</a>
                 </li>
+                <li class="nav-item">
+                    <a class="side-nav-link" href="#" th:href="@{'/admin/users/' + ${userProfile.id} + '/settings/password'}">Hasło</a>
+                </li>
             </ul>
         </div>
         <div class="col-md-9">
