[Admin Panel] Added delete user option

--- a/src/main/resources/templates/admin/forms/app-user-password-edit-form.html
+++ b/src/main/resources/templates/admin/forms/app-user-password-edit-form.html
@@ -19,6 +19,9 @@
                 <li class="nav-item">
                     <a class="side-nav-link active" href="#" th:href="@{'/admin/users/' + ${newUserPassword.id} + '/settings/password'}">Hasło</a>
                 </li>
+                <li class="nav-item">
+                    <a class="side-nav-link" href="#" th:href="@{'/admin/users/' + ${newUserPassword.id} + '/settings/delete_account'}">Usuwanie konta użytkownika</a>
+                </li>
             </ul>
         </div>
         <div class="col-md-9">
