--- a/src/main/resources/templates/admin/app-user-table.html
+++ b/src/main/resources/templates/admin/app-user-table.html
@@ -73,7 +73,7 @@
                 <a href="#" th:href="@{'/users/' + ${user.id}}"><i class="fa-solid fa-user icon-button"></i></a>
             </td>
             <td>
-                <a href="#" th:href="@{'/admin/users/' + ${user.id} + '/settings/profile'}"><i class="fa-solid fa-pen icon-button"></i></a>
+                <a href="#" th:href="@{'/admin/users/' + ${user.id} + '/settings/account'}"><i class="fa-solid fa-pen icon-button"></i></a>
             </td>
         </tr>
         <th:block th:if="${users.getNumberOfElements() < 10}" th:each="i, status: ${#numbers.sequence((1 + (users.getNumber() * 10) + users.getNumberOfElements()), (users.getNumber() + 1) * 10)}">
