--- a/src/main/resources/templates/admin/forms/app-user-password-edit-form.html
+++ b/src/main/resources/templates/admin/forms/app-user-password-edit-form.html
@@ -14,6 +14,9 @@
         <div class="col-md-3">
             <ul class="nav nav-pills flex-column">
                 <li class="nav-item">
+                    <a class="side-nav-link" href="#" th:href="@{'/admin/users/' + ${newUserPassword.id} + '/settings/account'}">Konto</a>
+                </li>
+                <li class="nav-item">
                     <a class="side-nav-link" href="#" th:href="@{'/admin/users/' + ${newUserPassword.id} + '/settings/profile'}">Profil</a>
                 </li>
                 <li class="nav-item">
